kubernetes/jonathan/01-deployment.yml
# 01-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microblog
spec:
  selector:
    matchLabels:
      app: microblog
  replicas: 2
  template:
    metadata:
      labels:
        app: microblog
    spec:
      containers:
      - image: docker.io/linusjonathansandin/microblog:v11.1.16-prod
        imagePullPolicy: Always
        name: microblog
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
        ports:
        - containerPort: 5000
